--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
 INCLUDES = -I.
-m6809_run_SOURCES = 6809.c gdb.c main.c monitor.c
+m6809_run_SOURCES = 6809.c gdb.c main.c monitor.c simple.c
 bin_PROGRAMS = m6809-run
