--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 #INCLUDES = -I.
-m6809_run_SOURCES = 6809.c gdb.c main.c monitor.c simple.c
+m6809_run_SOURCES = 6809.c main.c monitor.c simple.c
 bin_PROGRAMS = m6809-run
 #INCLUDES = -I. -DCONFIG_WPC -g
-#wpc_run_SOURCES = 6809.c gdb.c main.c monitor.c simple.c wpc.c
+#wpc_run_SOURCES = 6809.c main.c monitor.c simple.c wpc.c
 #bin_PROGRAMS = wpc-run
