Initial changes to support modular machines.
This adds infrastructure for adding devices that appear at various
memory-mapped addresses.  The intent is to eventual end up with a
simulator that looks more like a real machine, with persistent
storage capability and bank switching of more RAM.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 #INCLUDES = -I.
-m6809_run_SOURCES = 6809.c main.c monitor.c simple.c
+m6809_run_SOURCES = 6809.c main.c monitor.c simple.c machine.c
 bin_PROGRAMS = m6809-run
 #INCLUDES = -I. -DCONFIG_WPC -g
 #wpc_run_SOURCES = 6809.c main.c monitor.c simple.c wpc.c
