--- a/Makefile.in
+++ b/Makefile.in
@@ -53,7 +53,7 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 am_m6809_run_OBJECTS = 6809.$(OBJEXT) main.$(OBJEXT) monitor.$(OBJEXT) \
-	simple.$(OBJEXT)
+	simple.$(OBJEXT) machine.$(OBJEXT)
 m6809_run_OBJECTS = $(am_m6809_run_OBJECTS)
 m6809_run_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I.
@@ -158,7 +158,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 
 #INCLUDES = -I.
-m6809_run_SOURCES = 6809.c main.c monitor.c simple.c
+m6809_run_SOURCES = 6809.c main.c monitor.c simple.c machine.c
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -248,6 +248,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/6809.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/machine.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/monitor.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/simple.Po@am__quote@
