--- a/config.h.in
+++ b/config.h.in
@@ -3,7 +3,7 @@
 /* Use WPC address map */
 #undef CONFIG_WPC
 
-/* Use 6309 instructions */
+/* Use 6309 extensions */
 #undef H6309
 
 /* Define to 1 if you have the <fcntl.h> header file. */
