Many changes to the 6809 simulator:
- Separate the EON machine description from the generic
machine driver.  See eon.c, eon.h.
- Migrated more of the old, unfinished WPC simulator to
the new machine spec.
- Select machine to be used using '-s' option at runtime.
Thus, all machines are compiled into the same binary.
- Add many more comments.
- Warn on invalid calls to bus_map().
- Support MAP_FIXED, for regions that cannot be unmapped after
the machine begins to run.  The MMU registers on EON are an example.
- Added bus_unmap(), to restore to reset values.
- Page fault if accessing an invalid device ID.
- Support read-only maps.
- Rename many defines that get included from target code.
- Initialize MMU registers correctly based on initial maps.
- Update copyright headers.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,2 @@
-m6809_run_SOURCES = 6809.c main.c monitor.c simple.c machine.c
+m6809_run_SOURCES = 6809.c main.c monitor.c machine.c eon.c wpc.c
 bin_PROGRAMS = m6809-run
-#INCLUDES = -DCONFIG_WPC -g
-#wpc_run_SOURCES = 6809.c main.c monitor.c simple.c wpc.c
-#bin_PROGRAMS = wpc-run
