Modify WPC backend to send DMD date to a remote client.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
-m6809_run_SOURCES = 6809.c main.c monitor.c machine.c eon.c wpc.c symtab.c command.c fileio.c
+m6809_run_SOURCES = 6809.c main.c monitor.c machine.c eon.c wpc.c symtab.c command.c fileio.c wpclib.c
 bin_PROGRAMS = m6809-run
