Add includes to SOURCES so they are distributed.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,6 @@
-m6809_run_SOURCES = 6809.c main.c monitor.c machine.c eon.c wpc.c symtab.c command.c fileio.c wpclib.c
+m6809_run_SOURCES = \
+	6809.c main.c monitor.c machine.c eon.c wpc.c \
+	symtab.c command.c fileio.c wpclib.c \
+	6809.h config.h eon.h machine.h monitor.h wpclib.h
+
 bin_PROGRAMS = m6809-run
