--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,9 @@
 m6809_run_SOURCES = \
 	6809.c main.c monitor.c machine.c eon.c wpc.c \
-	symtab.c command.c fileio.c wpclib.c \
+	symtab.c command.c fileio.c wpclib.c imux.c stab.c \
 	6809.h config.h eon.h machine.h monitor.h wpclib.h
+
+LIBS = $(READLINE_LIBS)
 
 bin_PROGRAMS = m6809-run
 bin_SCRIPTS = wpc-run
