--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 m6809_run_SOURCES = \
 	6809.c main.c monitor.c machine.c eon.c wpc.c \
-	symtab.c command.c fileio.c wpclib.c imux.c stab.c \
+	symtab.c command.c fileio.c wpclib.c \
 	6809.h config.h eon.h machine.h monitor.h wpclib.h
 
 LIBS = $(READLINE_LIBS)
