--- a/Makefile.in
+++ b/Makefile.in
@@ -50,8 +50,7 @@ binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 am_m6809_run_OBJECTS = 6809.$(OBJEXT) main.$(OBJEXT) monitor.$(OBJEXT) \
 	machine.$(OBJEXT) eon.$(OBJEXT) wpc.$(OBJEXT) symtab.$(OBJEXT) \
-	command.$(OBJEXT) fileio.$(OBJEXT) wpclib.$(OBJEXT) \
-	imux.$(OBJEXT) stab.$(OBJEXT)
+	command.$(OBJEXT) fileio.$(OBJEXT) wpclib.$(OBJEXT)
 m6809_run_OBJECTS = $(am_m6809_run_OBJECTS)
 m6809_run_LDADD = $(LDADD)
 binSCRIPT_INSTALL = $(INSTALL_SCRIPT)
@@ -166,7 +165,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 m6809_run_SOURCES = \
 	6809.c main.c monitor.c machine.c eon.c wpc.c \
-	symtab.c command.c fileio.c wpclib.c imux.c stab.c \
+	symtab.c command.c fileio.c wpclib.c \
 	6809.h config.h eon.h machine.h monitor.h wpclib.h
 
 bin_SCRIPTS = wpc-run
@@ -281,11 +280,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/command.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/eon.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fileio.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/imux.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/machine.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/monitor.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stab.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/symtab.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wpc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wpclib.Po@am__quote@
