Create new file miscsbc.c for some new machine definitions. Move eon_fault() to fault() and move it to machine.c. Revise README accordingly.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 m6809_run_SOURCES = \
-	6809.c main.c monitor.c machine.c eon.c wpc.c \
+	6809.c main.c monitor.c machine.c eon.c wpc.c miscsbc.c \
 	symtab.c command.c fileio.c wpclib.c imux.c \
 	ioexpand.c mmu.c timer.c serial.c disk.c \
 	6809.h config.h eon.h machine.h monitor.h wpclib.h
