Ole's code to report OS9 system calls by name.

--- a/Makefile.in
+++ b/Makefile.in
@@ -168,7 +168,7 @@ m6809_run_SOURCES = \
 	6809.c main.c monitor.c machine.c eon.c wpc.c miscsbc.c \
 	symtab.c command.c fileio.c wpclib.c imux.c \
 	ioexpand.c mmu.c timer.c serial.c disk.c \
-	6809.h config.h eon.h machine.h monitor.h wpclib.h
+	6809.h config.h eon.h machine.h monitor.h os9syscalls.h wpclib.h
 
 bin_SCRIPTS = wpc-run
 all: config.h
